--- a/videopage.html
+++ b/videopage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -34,10 +34,11 @@
     />
   </head>
   <body>
-      <div class="p-[10px] flex justify-between w-[100%] items-center">
+    <div class="p-[10px] flex justify-between w-[100%] items-center">
       <button class="text-[blue] text-[25px]">
         <i class="fa-solid fa-plus add"></i>
       </button>
+      <input placeholder="Please enter your name" value="" type="text" class="flex text-center p-[10px] input border border-[2px solid white]" />
       <i class="fa-solid fa-moon text-[22px] darkmode"></i>
       <i style="display: none" class="fa-solid fa-sun lightmode"></i>
     </div>
@@ -90,15 +91,65 @@
       <div class="p-[20px]">
         <b> <h1 class="text-[21px]">Videos</h1></b>
       </div>
-      <div class="bg-red-500 grid grid-cols-4 grid-rows-3 gap-[5px] w-full justify-between items-center p-[20px]">
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
-        <video class="h-[200px] w-[300px]" controls autoplay muted src="cardvideo.mp4"></video>
+      <div
+        class="bg-red-500 grid grid-cols-4 grid-rows-3 gap-[5px] w-full justify-between items-center p-[20px]"
+      >
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
+        <video
+          class="h-[200px] w-[300px]"
+          controls
+          autoplay
+          muted
+          src="cardvideo.mp4"
+        ></video>
       </div>
     </section>
 
