--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <button class="text-[blue] text-[25px]">
         <i class="fa-solid fa-plus add"></i>
       </button>
+            <input placeholder="Please enter your name" value="" type="text" class="flex text-center p-[10px] input border border-[2px solid white]" />
+
       <i class="fa-solid fa-moon text-[22px] darkmode"></i>
       <i style="display: none" class="fa-solid fa-sun lightmode"></i>
     </div>
