--- a/videopage.html
+++ b/videopage.html
@@ -92,7 +92,7 @@
         <b> <h1 class="text-[21px]">Videos</h1></b>
       </div>
       <div
-        class="bg-red-500 grid grid-cols-4 grid-rows-3 gap-[5px] w-full justify-between items-center p-[20px]"
+        class="grid grid-cols-4 grid-rows-3 gap-[5px] w-full justify-between items-center p-[20px]"
       >
         <video
           class="h-[200px] w-[300px]"
