--- a/videopage.html
+++ b/videopage.html
@@ -27,7 +27,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -38,7 +37,12 @@
       <button class="text-[blue] text-[25px]">
         <i class="fa-solid fa-plus add"></i>
       </button>
-      <input placeholder="Please enter your name" value="" type="text" class="flex text-center p-[10px] input border border-[2px solid white]" />
+      <input
+        placeholder="Please enter your name"
+        value=""
+        type="text"
+        class="flex text-center p-[10px] input border border-[2px solid white]"
+      />
       <i class="fa-solid fa-moon text-[22px] darkmode"></i>
       <i style="display: none" class="fa-solid fa-sun lightmode"></i>
     </div>
@@ -152,6 +156,7 @@
         ></video>
       </div>
     </section>
+  
 
     <script src="index.js"></script>
   </body>
