added thre selfies page

--- a/selfie.html
+++ b/selfie.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <section class="smallscreen">
-      <b> <h1 class="text-[21px] selfiename"></h1></b>
+      <b> <h1 class="text-[21px] selfiename">Selfies</h1></b>
       <div class="imageshow"></div>
     </section>
 
@@ -75,9 +75,9 @@
           />`
         )
         .join("");
-      const selfiename = document.querySelector(".selfiename");
+    //   const selfiename = document.querySelector(".selfiename");
 
-      selfiename.innerHTML = selfies.length;
+    //   selfiename.innerHTML = selfies.length;
     </script>
   </body>
 </html>
