--- a/selfie.html
+++ b/selfie.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -34,36 +34,204 @@
     />
   </head>
   <body>
-    <section class="smallscreen flex justify-center items-center w-[100%]">
+    <section class="smallscreen flex w-[100%]">
       <div>
-        <b> <h1 class="text-[21px] selfiename">Selfies</h1></b>
-        <div class="imageshow w-[100%]"></div>
+        <div class="p-[20px]">
+          <b> <h1 class="text-[21px] selfiename">Selfies</h1></b>
+          <div class="imageshow w-[100%]"></div>
+        </div>
+        <div class="w-full p-4 album mobile">
+          <div class="grid grid-cols-3 gap-2 items-center">
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://plus.unsplash.com/premium_photo-1669740216382-71b87585ab1e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1557002665-c552e1832483?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://plus.unsplash.com/premium_photo-1669740216383-71344f7a5491?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1588514821696-0b59b1080071?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1631914289393-d529f81138a2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
+                ,
+                ,
+                alt="nature"
+              />
+            </div>
+            <div>
+              <img
+                class="w-[185px]  object-cover rounded-[15px]"
+                src="https://images.unsplash.com/photo-1631914289393-d529f81138a2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
+                ,
+                alt="nature"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <script>
+    <!-- <script>
       const selfies = [
-        "https://plus.unsplash.com/premium_photo-1669740216382-71b87585ab1e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1557002665-c552e1832483?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://plus.unsplash.com/premium_photo-1669740216383-71344f7a5491?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1588514821696-0b59b1080071?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1631914289393-d529f81138a2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1631914289393-d529f81138a2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww",
-        "https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D",
-        "https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww",
         "https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D",
       ];
       const selfieDisplayer = document.querySelector(".imageshow");
@@ -80,6 +248,6 @@
       //   const selfiename = document.querySelector(".selfiename");
 
       //   selfiename.innerHTML = selfies.length;
-    </script>
+    </script> -->
   </body>
 </html>
