added thre selfies page

--- a/selfie.html
+++ b/selfie.html
@@ -36,9 +36,10 @@
   <body>
     <section class="smallscreen flex w-[100%]">
       <div>
-        <div class="p-[20px]">
-          <b> <h1 class="text-[21px] selfiename">Selfies</h1></b>
-          <div class="imageshow w-[100%]"></div>
+        <div class="p-[20px] flex justify-between items-center">
+          <b> <h1 class="text-[23px] selfiename">Selfies</h1></b>
+          <i class="fa-solid fa-moon text-[22px] darkmode"></i>
+          <i style="display: none" class="fa-solid fa-sun lightmode"></i>
         </div>
         <div class="w-full p-4 album mobile">
           <div class="grid grid-cols-3 gap-2 items-center">
@@ -56,7 +57,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -65,7 +66,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -74,7 +75,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1582152629442-4a864303fb96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -83,7 +84,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -92,7 +93,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1616428362406-4ffd9fcbf023?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -101,7 +102,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1557002665-c552e1832483?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -111,7 +112,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -121,7 +122,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -131,7 +132,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -140,7 +141,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://plus.unsplash.com/premium_photo-1664366738239-68bb70434ac6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -149,7 +150,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://plus.unsplash.com/premium_photo-1669740216383-71344f7a5491?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -158,7 +159,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -167,7 +168,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1588514821696-0b59b1080071?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -176,7 +177,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -185,7 +186,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1713168690844-4b9079a06f8c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZSUyMG1hbnxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -194,7 +195,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1531891437562-4301cf35b7e4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VsZmllJTIwbWFufGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -205,7 +206,7 @@
                 src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
                 ,
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -214,7 +215,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -223,7 +224,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1631914289393-d529f81138a2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -233,7 +234,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c2VsZmllfGVufDB8fDB8fHww"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 ,
                 alt="nature"
               />
@@ -243,7 +244,7 @@
                 class="w-[185px] object-cover rounded-[15px]"
                 src="https://images.unsplash.com/photo-1600209142000-aa256622e64a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNlbGZpZXxlbnwwfHwwfHx8MA%3D%3D"
                 ,
-                  onclick="openLightbox(this.src, 'selfie')"
+                onclick="openLightbox(this.src, 'selfie')"
                 alt="nature"
               />
             </div>
@@ -489,7 +490,7 @@
 
       //   selfiename.innerHTML = selfies.length;
     </script> -->
-   <div
+    <div
       id="lightbox"
       class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50"
     >
