--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="flex-shrink-0">
           <img
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
+             onclick="openLightbox(this.src, 'X')"
             src="https://images.unsplash.com/file-1715652217532-464736461acbimage?w=416&dpr=2&auto=format&fit=crop&q=60"
             alt="nature"
           />
@@ -90,6 +91,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1444492417251-9c84a5fa18e0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8b3V0ZG9vcnxlbnwwfHwwfHx8MA%3D%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'xender')"
           />
           <p class="text-[18px] mt-[10px]">xender</p>
           <p class="text-[13.2px] mt-[-5px]">134</p>
@@ -99,6 +101,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1467385829985-2b0fb82b5193?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fG91dGRvb3J8ZW58MHx8MHx8fDA%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'instagram')"
           />
           <p class="text-[18px] mt-[10px]">instagram</p>
           <p class="text-[13.2px] mt-[-5px]">72</p>
@@ -108,6 +111,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1599696848652-f0ff23bc911f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aW50ZXJpb3J8ZW58MHx8MHx8fDA%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'tiktok')"
           />
           <p class="text-[18px] mt-[10px]">tiktok</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -122,6 +126,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1515516089376-88db1e26e9c0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aG9tZSUyMGZhbWlseXxlbnwwfHwwfHx8MA%3D%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'discord')"
           />
           <p class="text-[18px] mt-[10px]">discord</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -131,6 +136,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1476703993599-0035a21b17a9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aG9tZSUyMGZhbWlseXxlbnwwfHwwfHx8MA%3D%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'favourite')"
           />
           <p class="text-[18px] mt-[10px]">favourite</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -140,6 +146,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1576097449798-7c7f90e1248a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGhvbWUlMjBmYW1pbHl8ZW58MHx8MHx8fDA%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'skype')"
           />
           <p class="text-[18px] mt-[10px]">skype</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -149,6 +156,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGlmZXN0eWxlfGVufDB8fDB8fHww"
             alt="nature"
+             onclick="openLightbox(this.src, 'whatsapp')"
           />
           <p class="text-[18px] mt-[10px]">whatsapp</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -158,6 +166,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1598468872842-d39d85892daf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGxpZmVzdHlsZXxlbnwwfHwwfHx8MA%3D%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'pinterest')"
           />
           <p class="text-[18px] mt-[10px]">pinterest</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -167,6 +176,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1592355591829-aaae33fcff1d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGxpZmVzdHlsZXxlbnwwfHwwfHx8MA%3D%3D"
             alt="nature"
+             onclick="openLightbox(this.src, 'capcut')"
           />
           <p class="text-[18px] mt-[10px]">capcut</p>
           <p class="text-[13.2px] mt-[-5px]">132</p>
@@ -182,8 +192,10 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'Travel')"
               src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8dHJhdmVsfGVufDB8fDB8fHww"
             />
+            
             <p class="text-center mt-[5px]">Travel</p>
           </div>
         </div>
@@ -191,6 +203,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'snapchat')"
               src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=500&auto=format&fit=crop&q=60"
             />
             <p class="text-center mt-[5px]">Snapchat</p>
@@ -200,6 +213,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'family')"
               src="https://plus.unsplash.com/premium_photo-1683121257579-d40449389b63?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fHRyYXZlbHxlbnwwfHwwfHx8MA%3D%3D"
             />
             <p class="text-center mt-[5px]">Family</p>
@@ -209,6 +223,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'Flowers')"
               src="https://images.unsplash.com/photo-1486944859394-ed1c44255713?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zmxvd2Vyc3xlbnwwfHwwfHx8MA%3D%3D"
             />
             <p class="text-center mt-[5px]">Flowers</p>
@@ -218,6 +233,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'Dawn')"
               src="https://images.unsplash.com/photo-1490750967868-88aa4486c946?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Zmxvd2Vyc3xlbnwwfHwwfHx8MA%3D%3D"
             />
             <p class="text-center mt-[5px]">Dawn</p>
@@ -226,6 +242,7 @@
         <div class="h-[150px] flex p-[5px]">
           <div>
             <img
+             onclick="openLightbox(this.src, 'icecream')"
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
               src="https://images.unsplash.com/photo-1754824321161-764fb98adc71?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0fHx8ZW58MHx8fHx8"
             />
@@ -240,6 +257,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'Animals')"
               src="https://images.unsplash.com/photo-1748524480150-7735de539dd1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDEwfDZzTVZqVExTa2VRfHxlbnwwfHx8fHw%3D"
             />
             <p class="text-center mt-[5px]">Animals</p>
@@ -248,6 +266,7 @@
         <div class="h-[150px] flex p-[5px]">
           <div>
             <img
+             onclick="openLightbox(this.src, 'Couple')"
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
               src="https://images.unsplash.com/photo-1755311903765-69e5ef63c330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDEwfHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D"
             />
@@ -258,6 +277,7 @@
           <div>
             <img
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
+               onclick="openLightbox(this.src, 'City')"
               src="https://plus.unsplash.com/premium_photo-1673240845266-2f2c432cf194?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8eEh4WVRNSExnT2N8fGVufDB8fHx8fA%3D%3D"
             />
             <p class="text-center mt-[5px]">City</p>
@@ -266,6 +286,7 @@
         <div class="h-[150px] flex p-[5px]">
           <div>
             <img
+             onclick="openLightbox(this.src, 'parkint lot')"
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
               src="https://images.unsplash.com/photo-1755544614944-f2e6fcaf785a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDR8cVBZc0R6dkpPWWN8fGVufDB8fHx8fA%3D%3D"
             />
@@ -275,6 +296,7 @@
         <div class="h-[150px] flex p-[5px]">
           <div>
             <img
+             onclick="openLightbox(this.src, 'cinematic')"
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
               src="https://images.unsplash.com/photo-1752481109104-c07c68e82074?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE0fGhtZW52UWhVbXhNfHxlbnwwfHx8fHw%3D"
             />
@@ -284,6 +306,7 @@
         <div class="h-[150px] flex p-[5px]">
           <div>
             <img
+             onclick="openLightbox(this.src, 'people')"
               class="w-[100%] h-[130px] object-cover rounded-[15px]"
               src="https://images.unsplash.com/photo-1755542366536-5ee64ffa287c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDIzfHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D"
             />
@@ -304,6 +327,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1529419412599-7bb870e11810?w=500&auto=format&fit=crop&q=60"
             alt="nature"
+             onclick="openLightbox(this.src, 'people')"
           />
           <p class="text-center mt-[10px]">People</p>
         </div>
@@ -312,6 +336,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=500&auto=format&fit=crop&q=60"
             alt="places"
+             onclick="openLightbox(this.src, 'places')"
           />
           <p class="text-center mt-[10px]">Places</p>
         </div>
@@ -320,6 +345,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=500&auto=format&fit=crop&q=60"
             alt="nature"
+             onclick="openLightbox(this.src, 'nature')"
           />
           <p class="text-center mt-[10px]">Nature</p>
         </div>
