added thre selfies page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             class="w-[150px] h-[140px] object-cover rounded-[15px]"
             src="https://images.unsplash.com/photo-1529419412599-7bb870e11810?w=500&auto=format&fit=crop&q=60"
             alt="nature"
+             onclick="openLightbox(this.src, 'Recent')"
           />
           <p class="text-[18px] mt-[10px]">recent</p>
           <p class="text-[13.2px] mt-[-5px]">11</p>
